style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

html,
body {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    margin: 0;
    padding: 0;
    height: 100%;
}

h1 {
    margin: 0;
}

.main {
    /* height: 100vh; */
    height: 100%;
    background: rgb(49, 49, 49);
    color: white;
}

.content {
    height: 70%;
    display: grid;
    align-items: center;
    justify-content: center;
    text-align: center;
    grid-template-rows: 1fr 3fr;
}

.input {
    grid-row: 2;
}

.output {
    display: none;
}

.output-field {
    font-size: 3rem;
    padding: 3rem;
}

.boards-container {
    height: 30%;
}

.board {
    height: 100%;
    background: rgb(73, 73, 73);
    display: grid;
    gap: 7px;
    grid-template-columns: repeat(20, 1fr);
    grid-template-rows: 1fr 1fr 1fr 1fr;
    padding: 7px 3px;
}

.key {
    grid-column: span 2;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    border-radius: 10px;
    background: rgb(49, 49, 49);
    color: white;
    box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
                2px 2px 6px rgba(0, 0, 0, 0.8);
}

.row-2 {
    grid-row: 2;
}

.row-2-first {
    grid-column: 2 / span 2;
    /* background: red; */
}

.row-3 {
    grid-row: 3;
}

.row-3-first {
    grid-column: 4 / span 2;
    /* background: red; */
}

.shift {
    grid-column: 1 / span 3;
}

#shift {
    font-weight: bold;
}

.backs {
    grid-column: span 3;
}

.row4 {
    grid-row: 4;
}

.nums {
    grid-column: 1 / span 3;
}

/* .dot {

} */

.space {
    grid-column: 6 / span 10;
}

.enter {
    grid-column: span 3;
    background: blue;
    color: white;
}

.rev-col {
    background: rgb(59, 59, 59);
    /* color: white; */
}

/* dynamically added and removed classes */
.touched {
    /* background: black; */
    /* color: white; */
    color: #00fff1;
    box-shadow: 
                /* -1px -1px 3px rgba(255, 255, 255, 0.1), */
                /* 2px 2px 6px rgba(0, 0, 0, 0.8), */
                /* inset -2px -2px 10px rgba(255, 255, 255, 0.05), */
                inset -2px -2px 5px rgba(255, 255, 255, 0.05),
                /* inset 2px 2px 10px rgba(0, 0, 0, 0.5);  */
                inset 2px 2px 5px rgba(0, 0, 0, 0.5); 
}

.show {
    display: block;
}

.no-show {
    display: none;
}
/* dynamically added and removed classes end */

.input-field {
    width: 250px;
    min-height: 3rem;
    background: white;
    color: black;
    border-radius: 5px;
    padding: 1rem;
    margin: 1rem auto;
    text-align: left;
    overflow-wrap: anywhere;
}

/* Blinky */
.blinky {
    background: black;
    height: 0.75rem;
    width: 3px;
    display: inline-block;
    animation: blink 900ms ease-in-out infinite;
}

@keyframes blink {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

